[gd_scene load_steps=13 format=3 uid="uid://dnrw2ha6l31qt"]

[ext_resource type="Script" path="res://Scripts/combat_ui.gd" id="1_4d83m"]
[ext_resource type="PackedScene" uid="uid://dr33blco6e6f3" path="res://Scenes/UI/combat_submenu_btn.tscn" id="2_wacch"]
[ext_resource type="PackedScene" uid="uid://b5jby3b0oi4jg" path="res://Scenes/UI/combat_enemy_name.tscn" id="3_x1uuh"]
[ext_resource type="Shader" path="res://Resources/Shaders/Progress.gdshader" id="4_50iyy"]
[ext_resource type="Texture2D" uid="uid://xk8ji70ohc0a" path="res://Assets/Icons/inverted-triangle.png" id="5_rrp5m"]

[sub_resource type="Animation" id="Animation_p6jwj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1080)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1018)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/ScrollContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/SubmenuSelector:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../MarginContainer:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1920, 62)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("..:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1920, 390)]
}

[sub_resource type="Animation" id="Animation_0vcaf"]
resource_name = "hide_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 690), Vector2(0, 830)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 640), Vector2(0, 780)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/SubmenuSelector:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/ScrollContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_bie4m"]
resource_name = "hide_3"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 690), Vector2(0, 1080)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 640), Vector2(0, 1018)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/SubmenuSelector:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/ScrollContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_vm1b2"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1080), Vector2(0, 830)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1018), Vector2(0, 780)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/SubmenuSelector:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/ScrollContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_gbcc7"]
resource_name = "show_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 830), Vector2(0, 690)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../MarginContainer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 780), Vector2(0, 640)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/SubmenuSelector:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/ScrollContainer:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_21g8a"]
_data = {
"RESET": SubResource("Animation_p6jwj"),
"hide_2": SubResource("Animation_0vcaf"),
"hide_3": SubResource("Animation_bie4m"),
"show": SubResource("Animation_vm1b2"),
"show_2": SubResource("Animation_gbcc7")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a76a1"]
shader = ExtResource("4_50iyy")
shader_parameter/progress = 1.0
shader_parameter/fill_direction = Vector2(1, 0)
shader_parameter/unfilled_color = Color(0.333333, 0.333333, 0.333333, 1)
shader_parameter/filled_color = Color(1, 1, 1, 1)

[node name="CombatUI" type="CanvasLayer" node_paths=PackedStringArray("turn_indicator", "btn_container", "health_bar", "turn_menu_anim")]
process_mode = 3
script = ExtResource("1_4d83m")
turn_indicator = NodePath("MarginContainer/TurnIndicator")
combat_submenu_btn_scn = ExtResource("2_wacch")
btn_container = NodePath("MarginContainer2/PanelContainer/MarginContainer/ScrollContainer/ButtonContainer")
enemy_name_btn_scene = ExtResource("3_x1uuh")
health_bar = NodePath("MarginContainer3/Healthbar")
turn_menu_anim = NodePath("MarginContainer2/AnimationPlayer")

[node name="MarginContainer2" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1920, 0)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1080.0
offset_right = 1920.0
offset_bottom = 1470.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2"]
custom_minimum_size = Vector2(0, 390)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 25

[node name="SubmenuSelector" type="HBoxContainer" parent="MarginContainer2/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 50

[node name="Combat" type="Button" parent="MarginContainer2/PanelContainer/MarginContainer/SubmenuSelector"]
layout_mode = 2
size_flags_horizontal = 3
text = "Combat
"

[node name="Empathy" type="Button" parent="MarginContainer2/PanelContainer/MarginContainer/SubmenuSelector"]
layout_mode = 2
size_flags_horizontal = 3
text = "Empathy"

[node name="Item" type="Button" parent="MarginContainer2/PanelContainer/MarginContainer/SubmenuSelector"]
layout_mode = 2
size_flags_horizontal = 3
text = "Item"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer2/PanelContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="ButtonContainer" type="GridContainer" parent="MarginContainer2/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 40
columns = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer2"]
root_node = NodePath("../PanelContainer")
libraries = {
"": SubResource("AnimationLibrary_21g8a")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1920, 62)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1018.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 10

[node name="TurnIndicator" type="TextureRect" parent="MarginContainer"]
material = SubResource("ShaderMaterial_a76a1")
layout_mode = 2
texture = ExtResource("5_rrp5m")
expand_mode = 3
stretch_mode = 5

[node name="MarginContainer3" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="Healthbar" type="ProgressBar" parent="MarginContainer3"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
value = 100.0

[connection signal="button_up" from="MarginContainer2/PanelContainer/MarginContainer/SubmenuSelector/Combat" to="." method="_on_submenu_button_up" binds= ["combat"]]
[connection signal="button_up" from="MarginContainer2/PanelContainer/MarginContainer/SubmenuSelector/Item" to="." method="_on_submenu_button_up" binds= ["item"]]
